--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<div class="content">
 						<header>
 							<h2>You Should Not Have Clicked On That Link</h2>
-							<p>You could have been vulnerable to viruses.<br />
+							<p>You could have been vulnerable to viruses<br />
 						or identity theft.</p>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
