--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload landing">
+	<body class="is-preload landing">Laith's Eail Phishing Campaign Science Fair Project</body>
 		<div id="page-wrapper">
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
+					<h1 id="logo"><a href="index.html">Laith's C</a></h1>
 					<nav id="nav">
 						
 					</nav>
