--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload landing">Laith's Eail Phishing Campaign Science Fair Project</body>
+	<body class="is-preload landing">Laith's Email Phishing Campaign Science Fair Project</body>
 		<div id="page-wrapper">
 
 			<!-- Header -->
