--- a/index.html
+++ b/index.html
@@ -24,19 +24,21 @@
 				</header>
 
 			<!-- Banner -->
-				<section id="banner">
+				<section class="special">
 					<div class="content">
 						<header>
 							<h2>You Should Not Have Clicked On That Link</h2>
-							<p>You could have been vulnerable to viruses<br />
-						or identity theft.</p>
+							<p>You could have been vulnerable to viruses
+						or identity theft. The following video will help you learn how to avoid phishing emails in the future.</p>
 						</header>
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/R12_y2BhKbE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</section>
 
-
+				<section class="special" role="content">
+						<div class="content text-center">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/R12_y2BhKbE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						</div>
+				</section>
 
 			<!-- Footer -->
 				<footer id="footer">
