--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Laith's C</a></h1>
+					<h1 id="logo"><a href="index.html">Laith Abuoqab</a></h1>
 					<nav id="nav">
 						
 					</nav>
